# ATS-Breaker

./: .gitignore  README.md  app.py  custom.py  models.py  mydb  pyproject.toml  requirements.txt  test.py
static/css/: front.css  main.css
static/js/: front.js
templates/: front.html  index.html  register.html
