[tool.poetry]
name = "ats breaker"
version = "0.1.0"
description = ""
authors = ["Nithin C George <nithin.george@edstem.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "\b"
Flask-SQLAlchemy = "\b"
Flask-Login = "^0.5.0"
pyresparser = "^1.0.6"
fpdf = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
